# database_stein_watkins

./: README.md  format.txt
database_stein_watkins_huge/: pyproject.toml
database_stein_watkins_huge/database_stein_watkins/: a.046.bz2  a.048.bz2  a.049.bz2  a.050.bz2  a.051.bz2  a.052.bz2  a.053.bz2  a.054.bz2  a.055.bz2  a.056.bz2  a.057.bz2  a.058.bz2  a.059.bz2  a.060.bz2  a.061.bz2  a.062.bz2  a.063.bz2  a.064.bz2  a.065.bz2  a.066.bz2  a.067.bz2  a.068.bz2  a.069.bz2  a.070.bz2  a.071.bz2  a.072.bz2  a.073.bz2  a.074.bz2  a.075.bz2  a.076.bz2  a.077.bz2  a.078.bz2  a.079.bz2  a.080.bz2  a.081.bz2  a.082.bz2  a.083.bz2  a.084.bz2  a.085.bz2  a.086.bz2  (+1012 more)
database_stein_watkins_mini/: pyproject.toml
