[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "database_stein_watkins_mini"
version = "20070827"
maintainers = [{name = "The Sage Developers", email = "sage-devel@googlegroups.com"}]
license = {text = "Public Domain"}
dynamic = ["description"]

[project.urls]
Home = "https://www.sagemath.org"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.wheel]
packages = ["database_stein_watkins"]
